CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

IF(OSGOpenExrSrcDir AND OSGZLibSrcDir)

IF(OSGOpenExrSrcDir MATCHES "OpenEXR$")
  ADD_SUBDIRECTORY(Initial)
ELSE()
  ADD_SUBDIRECTORY(Current)
ENDIF()

ELSE(OSGOpenExrSrcDir AND OSGZLibSrcDir)
  SET(OSGOpenExrSrcDir "" CACHE PATH "")
ENDIF(OSGOpenExrSrcDir AND OSGZLibSrcDir)
